# nunet

./: .gitignore  README.md  example1_regression.ipynb  example2_mnist.ipynb  pyproject.toml
nunet/dtype/: __init__.py  tensor.py
nunet/layer/: __init__.py  linear.py  module.py  sequential.py
nunet/layer/activation/: __init__.py  relu.py  sigmoid.py
nunet/loss/: __init__.py  cross_entropy_loss.py  loss_module.py  mean_squared_error.py
nunet/nn/: mlp.py
nunet/optim/: __init__.py  optim_module.py  sgd.py
